fix: Carbon Gray10 theme has poor contrast for hints
This PR also fixes a few related theming issues.

part of #7956

--- a/plugins/plugin-carbon-themes/web/scss/carbon-gray90.scss
+++ b/plugins/plugin-carbon-themes/web/scss/carbon-gray90.scss
@@ -31,7 +31,8 @@ body[kui-theme='Carbon Gray90'][kui-theme-style] {
 
   @include ScrollbackInvertedColors {
     @include colors-light;
-    @reset;
+    @include Reset;
+    --color-text-02: #565656;
 
     @include Sidecar {
       @include carbon-inverted;
