--- a/plugins/plugin-client-common/web/scss/Themes/_mixins.scss
+++ b/plugins/plugin-client-common/web/scss/Themes/_mixins.scss
@@ -60,6 +60,8 @@
   --color-ui-05: var(--color-base04);
   --color-ui-06: var(--color-base02);
 
+  --color-repl-background: var(--color-ui-01);
+
   --color-yellow-sidecar: var(--color-yellow);
   color: var(--color-text-01);
 }
