--- a/plugins/plugin-client-common/web/scss/components/DropDown/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/DropDown/PatternFly.scss
@@ -60,6 +60,7 @@ body[kui-theme-style] {
   .pf-c-dropdown__menu {
     max-height: 30rem;
     overflow-y: auto;
+    color: var(--color-text-01);
     background-color: var(--color-dropdown);
 
     .pf-c-dropdown__menu-item {
